# metaxsfr

./: .gitignore  README.md  conda-lock.yml  environment.yml  install.sh  main.nf  metaxsfr.py  nextflow.config  pyproject.toml
sample/: sample.list
sample/bracken/: SRR23994336.breport.txt  SRR23994337.breport.txt  SRR23994338.breport.txt  SRR23994342.breport.txt  SRR23994343.breport.txt  SRR23994349.breport.txt  SRR23994359.breport.txt  SRR23994388.breport.txt  SRR23994417.breport.txt  SRR23994418.breport.txt
sample/kraken2/: SRR23994336.kreport.txt  SRR23994337.kreport.txt  SRR23994338.kreport.txt  SRR23994342.kreport.txt  SRR23994343.kreport.txt  SRR23994349.kreport.txt  SRR23994359.kreport.txt  SRR23994388.kreport.txt  SRR23994417.kreport.txt  SRR23994418.kreport.txt
sample/metaphlan4/: SRR23994336.metaphlan4.txt  SRR23994337.metaphlan4.txt  SRR23994338.metaphlan4.txt  SRR23994342.metaphlan4.txt  SRR23994343.metaphlan4.txt  SRR23994349.metaphlan4.txt  SRR23994359.metaphlan4.txt  SRR23994388.metaphlan4.txt  SRR23994417.metaphlan4.txt  SRR23994418.metaphlan4.txt
